# merqube-client-lib

./: .coveragerc  .gitignore  Changelog.md  Makefile  README.md  generate_types.sh  pylintrc  pyproject.toml  tox.ini
.circleci/: circle-ci-deps.txt  config.yml
docs/: BasketDemo.md  CreatingIndices.md  DataRetrieval.md  DecrementDemo.md  Overview.md
docs/examples/multi_basket/: MultiBasketDemo.md  level_overrides.csv  portfolios_initial.csv  portfolios_initial_corax_compare.csv  portfolios_update.csv  portfolios_update_2.csv
docs/examples/tr_decrement/: DecrementDemo.md
examples/multi_basket/: MultiBasketDemo.md  example_mult.json  example_mult_no_corax.json  portfolios_initial_corax_compare.csv  portfolios_update_2.csv
examples/tr_decrement/: DecrementDemo.md  decrement.json  single_stock_example.json
merqube_client_lib/: constants.py  exceptions.py  logging.py  mocker.py  pydantic_types.py  pydantic_v2_types.py  session.py  types.py  util.py
merqube_client_lib/api_client/: base.py  indexapi.py  merqube_client.py  secapi.py
merqube_client_lib/secapi/: client.py  read.py  util.py
merqube_client_lib/templates/: configs.py  util.py
merqube_client_lib/templates/equity_baskets/: create_index.py  creators.py  decrement_create.py  multieb_create.py  portfolios.csv  schema.py  sstr_create.py  util.py
merqube_client_lib/templates/options/: creators.py
merqube_client_lib/types/: __init__.py  secapi.py
tests/: conftest.py
tests/integration/: test_base_session.py  test_client_public_reads.py  test_indexapi_client_single.py  test_indexapi_client_single_creates.py  test_indexapi_client_single_public_reads.py  test_secapi_client.py  test_secapi_client_chunking.py  test_session.py  test_skeleton.py  test_templating.py
tests/integration/secapi/: test_api_client_class.py
tests/unit/: conftest.py  helpers.py  test_base.py  test_base_session.py  test_indexapi_client.py  test_indexapi_client_multi.py  test_indexapi_client_single.py  test_logging.py  test_merqube_client.py  test_mocker.py  test_secapi_base.py  test_secapi_client.py  test_secapi_client_reads.py  test_session.py  test_util.py
tests/unit/fixtures/: dummy_secapi.py  gsm_chunked_fixtures.py  gsm_fixtures.py  templated_mult.json  templated_mult_ports.json  templated_ss.json  test_manifest.py  test_tr_manifest_for_dec.py  (+3 more)
(+32 files in other folders)
