[tool.poetry]
name = "merqube-client-lib"
version = "0.17.1"
description = "MerQube IndexAPI + SecAPI client library"
authors = ["Merqube"]
readme = "README.md"
license = "APACHE-2.0"
homepage = "https://github.com/merqube/merqube-client-lib"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
cachetools = "^5.2.0"
boto3 = {version="*"}
click = "~8"
Flask = "~2"
Flask-Cors = "~3"
python = "^3.10,<4.0"
pydantic = {"version" = "^1.10.5"}
pandas = ">=1.3.0, <3.0.0"
pandas_market_calendars = "*"
requests = "*"

[tool.poetry.scripts]
create = "merqube_client_lib.templates.equity_baskets.bin.create_index:main"
update_portfolio = "merqube_client_lib.templates.equity_baskets.bin.update_portfolio:main"
get_eb_template = "merqube_client_lib.templates.equity_baskets.bin.get_eb_template:main"

[tool.poetry.dev-dependencies]
coverage =  {version="*"}
pdbpp = {version="*"}
pytest = {version="*"}
types-pytz = {version="*"}
pytest-cov =  {version="*"}
pytest-timeout =  {version="*"}
pytest-socket =  {version="*"}
freezegun = {version="*"}
mypy = {version="*"}
types-cachetools = {version="*"}
types-flask = {version="*"}
types-requests = {version="*"}
types-retry = {version="*"}
pytest-xdist = {extras = ["psutil"], version = "^2.5.0"}
tzlocal = {"version" = "5.0.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
ignore_missing_imports = true
# the pydantic types file is autogenerated and overwritten each time
exclude = [
    "merqube_client_lib/mocker.py",
    "merqube_client_lib/pydantic_types.py"
]

disable_error_code = [
]

[tool.pyright]
# missing types in 3rd parties:
reportMissingImports = false
reportMissingModuleSource = false
exclude = [
    "merqube_client_lib/pydantic_types.py"
]

# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
# https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker
[[tool.mypy.overrides]]
module = [
     "flask_cors",
     "pandas",
     "boto3",
     "botocore",
     "regex",
]
